--- a/waterblast-automation/autobox-abx-2l.html
+++ b/waterblast-automation/autobox-abx-2l.html
@@ -206,8 +206,8 @@ master-slider: yes
   </div>
   <div class="row row-centered">
     <div class="col-sm-2 col-centered">
-      <a href="/fin-fan-kit"><img class="img-responsive" src="/assets/img/product/thumb-fin-fan-05.jpg" alt="ABX-2L fin fan cleaning kit">
-      <h5>Fin Fan Kit</h5></a>
+      <a href="/fin-fan-accessory"><img class="img-responsive" src="/assets/img/product/thumb-fin-fan-05.jpg" alt="ABX-2L fin fan cleaning kit">
+      <h5>Fin Fan Accessory</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
       <a href="/hose-containment"><img class="img-responsive" src="../assets/img/product/thumb-hcs-01.jpg" alt="Hose containment for exchanger cleaning">
