--- a/waterblast-automation/hose-containment.html
+++ b/waterblast-automation/hose-containment.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 page-type: product
-title: Fin Fan Cooler Cleaning Kit for AutoBox ABX-2L Automated Flex Lancing System
+title: Hose Containment for AutoBox ABX-2L Automated Flex Lancing System
 permalink: /hose-containment
 master-slider: yes
 ---
@@ -27,20 +27,20 @@ master-slider: yes
       <div class="ms-showcase2-template">
         <div class="master-slider ms-skin-default" id="masterslider">
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/hcs-01.jpg" alt="Fin fan cooler cleaning kit">
+            <img src="../assets/img/blank.gif" data-src="../assets/img/product/hcs-01.jpg" alt="Hose containment for exchanger cleaning">
             <img class="ms-thumb" src="../assets/img/product/thumb-hcs-01.jpg" alt="thumb">
 <!--              <a data-type="video" href="https://www.youtube.com/embed/jCTBlGM324Q"> </a>-->
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/hcs-02.jpg" alt="Fin fan cooler cleaning kit">
+            <img src="../assets/img/blank.gif" data-src="../assets/img/product/hcs-02.jpg" alt="Hose containment for exchanger cleaning">
             <img class="ms-thumb" src="../assets/img/product/thumb-hcs-02.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/hcs-03.jpg" alt="Fin fan cooler cleaning kit">
+            <img src="../assets/img/blank.gif" data-src="../assets/img/product/hcs-03.jpg" alt="Hose containment for exchanger cleaning">
             <img class="ms-thumb" src="../assets/img/product/thumb-hcs-03.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/hcs-04.jpg" alt="Fin fan cooler cleaning kit">
+            <img src="../assets/img/blank.gif" data-src="../assets/img/product/hcs-04.jpg" alt="Hose containment for exchanger cleaning">
             <img class="ms-thumb" src="../assets/img/product/thumb-hcs-04.jpg" alt="thumb">
           </div>
         </div>
@@ -55,14 +55,14 @@ master-slider: yes
         <div class="dropdown product-social">
           <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i> Share</a>
           <ul class="dropdown-menu">
-            <li><a href="mailto:?subject=StoneAge Automated Flex Lancing&body=Check out the Hose Containment System for the StoneAge AutoBox ABX-2L: http://www.stoneagetools.com/hose-containment">E-mail link</a></li>
+            <li><a href="mailto:?subject=StoneAge Hose Containment for Automated Flex Lancing&body=Check out the Hose Containment System for the StoneAge AutoBox ABX-2L: http://www.stoneagetools.com/hose-containment">E-mail link</a></li>
           </ul>
         </div>
       <div class="clearfix"></div>
       </div>
 
       <p class="product-description">The Hose Containment System, or HCS-2L, is a lightweight accessory for the Autobox ABX-2L, which contains and securely stores hoses typically used for heat exchanger tube cleaning.</p>
-      <p>The HCS is a simple system to setup and operate, and greatly increases job site safety by eliminating the potential for high pressure hoses to snag on structure, valves, or other objects. It also increases hose life by reducing wear and makes it easy to store and transport hoses between jobs.</p>
+      <p>The HCS-2L is a simple system to setup and operate, and greatly increases job site safety by eliminating the potential for high pressure hoses to snag on structure, valves, or other objects. It also increases hose life by reducing wear and makes it easy to store and transport hoses between jobs.</p>
 
       <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
         <div class="panel panel-default">
@@ -76,10 +76,10 @@ master-slider: yes
           <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
             <div class="panel-body">
               <ul>
-                <li>Lightweight positioning system is customizable to fit most exchanger sizes</li>
-                <li>Hose snout and tube guide assembly aids accurate lance control and indexing</li>
-                <li>Built-in backout prevention</li>
-                <li>Scaffold mount</li>
+                <li>Reliable hose containment and storage for increased job site safety</li>
+                <li>Easily store and transport hoses between jobs</li>
+                <li>Reduces hose wear</li>
+                <li>Lightweight and durable with good corrosion resistance</li>
               </ul>
             </div>
           </div>
@@ -94,34 +94,104 @@ master-slider: yes
           </div>
           <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
             <div class="panel-body">
-              <table class="table specs table-hover">
-              <tbody>
-                <tr>
-                  <th>Tool Model</th>
-                  <td colspan="2">FF-100</td>
-                </tr>
-                <tr>
-                  <th>Horizontal Length</th>
-                  <td colspan="2">Standard 15 ft <span class="metric">457 cm</span><br>Custom lengths available</td>
-                </tr>
-                <tr>
-                  <th>Vertical Length</th>
-                  <td colspan="2">Standard 3.5 ft <span class="metric">107 cm</span><br>Custom lengths available</td>
-                </tr>
-                <tr>
-                  <th>Hose Size</th>
-                  <td colspan="2">3/2-8/4</td>
-                </tr>
-                <tr>
-                  <th>Pitch Adjustment</th>
-                  <td>0.6–2.5 in.</td>
-                  <td><span class="metric">15–64 mm</span></td>
-                </tr>
-              </tbody>
-              </table>
+              <!-- Nav tabs -->
+              <ul class="nav nav-tabs" role="tablist">
+                <li role="presentation" class="active"><a href="#tm16" aria-controls="tm16" role="tab" data-toggle="tab">HCS-2L-TM16</a></li>
+                <li role="presentation"><a href="#m24" aria-controls="m24" role="tab" data-toggle="tab">HCS-2L-M24</a></li>
+              </ul>
+              <!-- Tab panes -->
+              <div class="tab-content">
+                <!-- TM16 -->
+                <div role="tabpanel" class="tab-pane active" id="tm16">
+                  <table class="table specs table-hover">
+                  <tbody>
+                    <tr>
+                      <th>Tool Model</th>
+                      <td colspan="2">HCS-2L-TM16</td>
+                    </tr>
+                    <tr>
+                      <th>Maximum Pressure</th>
+                      <td>22k psi</td>
+                      <td><span class="metric">1300 bar</span></td>
+                    </tr>
+                    <tr>
+                      <th>Storage Capacity*</th>
+                      <td>84 ft</td>
+                      <td><span class="metric">25 m</span></td>
+                    </tr>
+                    <tr>
+                      <th>Swivel Inlet</th>
+                      <td colspan="2">1.00 Type M to MP12</td>
+                    </tr>
+                    <tr>
+                      <th>Hose Connections</th>
+                      <td colspan="2">.56 Type M to .75 Type M</td>
+                    </tr>
+                    <tr>
+                      <th>Dimensions</th>
+                      <td>28.6 x 15.4 in.</td>
+                      <td><span class="metric">73 x 39 cm</span></td>
+                    </tr>
+                    <tr>
+                      <th>Hose Size</th>
+                      <td colspan="2">&le; 6/4</td>
+                    </tr>
+                    <tr>
+                      <th>Weight</th>
+                      <td>42 lb</td>
+                      <td><span class="metric">19 kg</span></td>
+                    </tr>
+                  </tbody>
+                  </table>
+                </div>
+                <!-- M24 -->     
+                <div role="tabpanel" class="tab-pane" id="m24">
+                  <table class="table specs table-hover">
+                  <tbody>
+                    <tr>
+                      <th>Tool Model</th>
+                      <td colspan="2">HCS-2L-M24</td>
+                    </tr>
+                    <tr>
+                      <th>Maximum Pressure</th>
+                      <td>22k psi</td>
+                      <td><span class="metric">1300 bar</span></td>
+                    </tr>
+                    <tr>
+                      <th>Storage Capacity*</th>
+                      <td>84 ft</td>
+                      <td><span class="metric">25 m</span></td>
+                    </tr>
+                    <tr>
+                      <th>Swivel Inlet</th>
+                      <td colspan="2">MP12 to M24C</td>
+                    </tr>
+                    <tr>
+                      <th>Hose Connections</th>
+                      <td colspan="2">MP6 to BSPP4C</td>
+                    </tr>
+                    <tr>
+                      <th>Dimensions</th>
+                      <td>28.6 x 15.4 in.</td>
+                      <td><span class="metric">73 x 39 cm</span></td>
+                    </tr>
+                    <tr>
+                      <th>Hose Size</th>
+                      <td colspan="2">&le; 6/4</td>
+                    </tr>
+                    <tr>
+                      <th>Weight</th>
+                      <td>42 lb</td>
+                      <td><span class="metric">19 kg</span></td>
+                    </tr>
+                  </tbody>
+                  </table>
+                </div>
+              </div>
             </div>
           </div>
         </div>
+<!--
         <div class="panel panel-default">
           <div class="panel-heading" role="tab" id="headingThree">
             <h4 class="panel-title">
@@ -141,6 +211,7 @@ master-slider: yes
             </div>
           </div>
         </div>
+-->
         <div class="panel panel-default">
           <div class="panel-heading" role="tab" id="headingFour">
             <h4 class="panel-title">
@@ -152,8 +223,9 @@ master-slider: yes
           <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
             <div class="panel-body">
               <ul>
-                <li><a href="#" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;HCS-2L Hose Containment User Manual</a></li>
-                <li><a href="../assets/pdf/sales-manual/HCS-2L_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;HCS-2L Hose Containment Tool Talk</a></li>
+                <li><a href="#" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;HCS-2L Data Sheet</a></li>
+                <li><a href="/assets/pdf/manuals/HCS-2L_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;HCS-2L User Manual</a></li>
+                <li><a href="../assets/pdf/sales-manual/HCS-2L_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;HCS-2L Configuration</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
@@ -162,7 +234,7 @@ master-slider: yes
         </div><!-- end tab -->
       </div><!-- end accordion -->
 
-      <a href="#" class="btn btn-lg btn-block contact" role="button">Pre-Order Now</a>
+      <a href="http://info.stoneagetools.com/hose-containment-quote" class="btn btn-lg btn-block contact" role="button">Request a Quote</a>
 
   </div>
   <!-- End Product Info -->
@@ -182,8 +254,8 @@ master-slider: yes
       <h5>AutoBox ABX-2L</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
-      <a href="/fin-fan-kit"><img class="img-responsive" src="/assets/img/product/thumb-fin-fan-05.jpg" alt="ABX-2L fin fan cleaning kit">
-      <h5>Fin Fan Kit</h5></a>
+      <a href="/fin-fan-accessory"><img class="img-responsive" src="/assets/img/product/thumb-fin-fan-05.jpg" alt="ABX-2L fin fan cleaning kit">
+      <h5>Fin Fan Accessory</h5></a>
     </div>
   </div>
 </section>
@@ -200,7 +272,8 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="/assets/pdf/sales-manual/HCS-2L_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Tool Talk</a></td>
+          <td><a href="#" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
+          <td><a href="/assets/pdf/sales-manual/HCS-2L_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Tool Configuration</a></td>
           <td><a href="../safety-information.html"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
