--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -61,8 +61,9 @@ permalink: /waterblast-tools-automated-equipment
         <div class="col-sm-4 product-list">
           <div class="list-group">
             <a href="#" class="list-group-item header">Automated Exchanger Cleaning</a>
-            <a href="/abx-2l" class="list-group-item">AutoBox ABX-2L<span class="label label-info">Flex Lancing</span></a><a href="/fin-fan-kit" class="list-group-item">Fin Fan Kit for ABX-2L</a>
-            <a href="/hose-containment" class="list-group-item">Hose Containment for ABX-2L</a>
+            <a href="/abx-2l" class="list-group-item">AutoBox ABX-2L<span class="label label-info">Flex Lancing</span></a>
+            <a href="/fin-fan-kit" class="list-group-item">Fin Fan Accessory for ABX-2L<span class="label label-warning">New for 2016</span></a>
+            <a href="/hose-containment" class="list-group-item">Hose Containment for ABX-2L<span class="label label-warning">New for 2016</span></a>
             <a href="/bundle-blaster" class="list-group-item">Bundle Blaster<span class="label label-info">Shell Side Cleaning</span></a>
             <a href="/rigid-lance-machine" class="list-group-item">Rigid Lance Machine<span class="label label-info">Rigid Lancing</span></a>
           </div>
