--- a/product-catalogs.html
+++ b/product-catalogs.html
@@ -247,11 +247,11 @@ permalink: /product-catalogs
   <div class="col-sm-6 padding-left-60">
     <div class="row margin-bottom-30">
       <div class="col-sm-4">
-        <a href="assets/pdf/sewer_2014/2014_warthog_catalog_web.pdf" target="_blank" title="2014/2015 Warthog Sewer Catalog"><img src="assets/img/warthog_catalog_cover_2014.jpg" class="img-responsive" alt="2016 StoneAge Waterblast Tools Catalog"></a>
+        <a href="assets/pdf/sewer_2016/2016_warthog_catalog_web.pdf" target="_blank" title="2016 StoneAge Warthog Sewer Tools Catalog"><img src="assets/img/catalog_cover_sewer_2016.jpg" class="img-responsive" alt="2016 StoneAge Warthog Sewer Tools Catalog"></a>
       </div>
       <div class="col-sm-8">
-        <h3>2014/15 Sewer Nozzles</h3>
-        <p><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web.pdf" target="_blank" title="2014/2015 Warthog Sewer Catalog">Click here to download the complete 2014/15 Sewer Nozzles Catalog</a> » PDF 2 MB</p>
+        <h3>2016 Sewer Nozzles</h3>
+        <p><a href="assets/pdf/sewer_2016/2016_warthog_catalog_web.pdf" target="_blank" title="2016 StoneAge Warthog Sewer Tools Catalog">Click here to download the complete 2016 Sewer Nozzles Catalog</a> » PDF 6 MB</p>
       </div>
     </div>
 
@@ -260,115 +260,79 @@ permalink: /product-catalogs
       <table class="table table-condensed catalog-pages">
         <tr>
           <td>Page 1:</td>
-          <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page1.pdf" target="_blank">Front Cover</a></td>
+          <td><a href="assets/pdf/sewer_2016/2016_warthog_catalog_Part1.pdf" target="_blank">Front Cover</a></td>
         </tr>
         <tr>
-          <td>Page 2:</td>
-          <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page2.pdf" target="_blank">Catalog Contents</a></td>
+          <td>Page 2-3:</td>
+          <td><a href="assets/pdf/sewer_2016/2016_warthog_catalog_Part2.pdf" target="_blank">Catalog Contents</a></td>
         </tr>
         <tr>
-          <td>Page 3:</td>
-          <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page3.pdf" target="_blank">Catalog Contents</a></td>
+          <td>Page 4-5:</td>
+          <td><a href="assets/pdf/sewer_2016/2016_warthog_catalog_Part3.pdf" target="_blank">WV-1/4 (2&#8243;-4&#8243; Lines)</a></td>
         </tr>
         <tr>
-          <td>Page 4:</td>
-          <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page4.pdf" target="_blank">WV-1/4 (2&#8243;-4&#8243; Lines)</a></td>
+          <td>Page 6-7:</td>
+          <td><a href="assets/pdf/sewer_2016/2016_warthog_catalog_Part4.pdf" target="_blank">WT-3/8-C (3&#8243;-6&#8243; Lines)</a></td>
         </tr>
         <tr>
-          <td>Page 5:</td>
-          <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page5.pdf" target="_blank">WV-1/4 (continued)</a></td>
+          <td>Page 8-9:</td>
+          <td><a href="assets/pdf/sewer_2016/2016_warthog_catalog_Part5.pdf" target="_blank">WS-1/2 (4&#8243;-8&#8243; Lines)</a></td>
         </tr>
         <tr>
-          <td>Page 6:</td>
-          <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page6.pdf" target="_blank">WT-3/8-C (3&#8243;-6&#8243; Lines)</a></td>
+          <td>Page 10-11:</td>
+          <td><a href="assets/pdf/sewer_2016/2016_warthog_catalog_Part6.pdf" target="_blank">WHR Magnum</a></td>
         </tr>
         <tr>
-          <td>Page 7:</td>
-          <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page7.pdf" target="_blank">WT-3/8-C (continued)</a></td>
+          <td>Page 12-13:</td>
+          <td><a href="assets/pdf/sewer_2016/2016_warthog_catalog_Part7.pdf" target="_blank">WH-1/2 &amp; WH-3/4 (6&#8243;-18&#8243; Lines)</a></td>
         </tr>
         <tr>
-          <td>Page 8:</td>
-          <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page8.pdf" target="_blank">WS-1/2 (4&#8243;-8&#8243; Lines)</a></td>
+          <td>Page 14-15:</td>
+          <td><a href="assets/pdf/sewer_2016/2016_warthog_catalog_Part8.pdf" target="_blank">WHP-3/4 Classic (6&#8243;-18&#8243; Lines with Elbows)</a></td>
         </tr>
         <tr>
-          <td>Page 9:</td>
-          <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page9.pdf" target="_blank">WS-1/2 (continued)</a></td>
+          <td>Page 16-17:</td>
+          <td><a href="assets/pdf/sewer_2016/2016_warthog_catalog_Part9.pdf" target="_blank">WGR Magnum (8&#8243;-36&#8243; Lines)</a></td>
         </tr>
         <tr>
-          <td>Page 10:</td>
-          <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page10.pdf" target="_blank">WH-1/2 &amp; WH-3/4 (6&#8243;-18&#8243; Lines)</a></td>
+        <td>Page 18-19:</td>
+          <td><a href="assets/pdf/sewer_2016/2016_warthog_catalog_Part10.pdf" target="_blank">WGR Switcher</a></td>
         </tr>
         <tr>
-          <td>Page 11:</td>
-          <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page11.pdf" target="_blank">WH-1/2 &amp; WH-3/4 (continued)</a></td>
+          <td>Page 20-21:</td>
+          <td><a href="assets/pdf/sewer_2016/2016_warthog_catalog_Part11.pdf" target="_blank">WG-1 Classic (8&#8243;-36&#8243; Lines)</a></td>
         </tr>
         <tr>
-          <td>Page 12:</td>
-          <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page12.pdf" target="_blank">WHP-3/4 Classic (6&#8243;-18&#8243; Lines with Elbows)</a></td>
+          <td>Page 22-23:</td>
+          <td><a href="assets/pdf/sewer_2016/2016_warthog_catalog_Part12.pdf" target="_blank">WGP-1 Classic (8&#8243;-36&#8243; Lines)</a></td>
         </tr>
         <tr>
-          <td>Page 13:</td>
-          <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page13.pdf" target="_blank">WHP-3/4 Classic (continued)</a></td>
+        <td>Page 24-25:</td>
+          <td><a href="assets/pdf/sewer_2016/2016_warthog_catalog_Part13.pdf" target="_blank">WGR 1-1/4 Magnum (8&#8243;-36&#8243; lines)</a></td>
         </tr>
         <tr>
-          <td>Page 14:</td>
-          <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page14.pdf" target="_blank">WGR Magnum</a></td>
+        <td>Page 26-27:</td>
+          <td><a href="assets/pdf/sewer_2016/2016_warthog_catalog_Part14.pdf" target="_blank">WD 1-1/4 Classic High Flow</a></td>
         </tr>
         <tr>
-        <td>Page 15:</td>
-          <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page15.pdf" target="_blank">WGR Magnum (continued)</td>
+        <td>Page 28-29:</td>
+          <td><a href="assets/pdf/sewer_2016/2016_warthog_catalog_Part15.pdf" target="_blank">Hydro-X</a></td>
         </tr>
         <tr>
-          <td>Page 16:</td>
-          <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page16.pdf" target="_blank">WG-1 Classic (8&#8243;-36&#8243; Lines)</a></td>
+        <td>Page 30-31:</td>
+          <td><a href="assets/pdf/sewer_2016/2016_warthog_catalog_Part16.pdf" target="_blank">Centralizers &amp; Manhole Cleaners/Safety Information</a></td>
         </tr>
         <tr>
-          <td>Page 17:</td>
-          <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page17.pdf" target="_blank">WG-1 Classic (continued)</a></td>
+        <td>Page 32-33:</td>
+          <td><a href="assets/pdf/sewer_2016/2016_warthog_catalog_Part17.pdf" target="_blank">Customer Service/Terms and Conditions of Sale</a></td>
         </tr>
         <tr>
-        <td>Page 18:</td>
-          <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page18.pdf" target="_blank">WGP-1 Classic (8&#8243;-36&#8243; lines)</a></td>
+          <td>Page 34-35:</td>
+          <td><a href="assets/pdf/sewer_2016/2016_warthog_catalog_Part18.pdf" target="_blank">StoneAge Staff</a></td>
         </tr>
         <tr>
-        <td>Page 19:</td>
-          <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page19.pdf" target="_blank">WGP-1 Classic (continued)</a></td>
-        </tr>
-        <tr>
-        <td>Page 20:</td>
-          <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page20.pdf" target="_blank">WD 1-1/4 Classic High Flow</a></td>
-        </tr>
-        <tr>
-        <td>Page 21:</td>
-          <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page21.pdf" target="_blank">WD 1-1/4 Classic (continued)</a></td>
-        </tr>
-        <tr>
-        <td>Page 22:</td>
-          <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page22.pdf" target="_blank">Hydro-X</a></td>
-        </tr>
-        <tr>
-        <td>Page 23:</td>
-          <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page23.pdf" target="_blank">Centralizers &amp; Manhole Cleaners</a></td>
-        </tr>
-        <tr>
-        <td>Page 24:</td>
-          <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page24.pdf" target="_blank">Terms and Conditions of Sale</a></td>
-        </tr>
-        <tr>
-          <td>Page 25:</td>
-          <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page25.pdf" target="_blank">Terms and Conditions of Sale (continued)</a></td>
-        </tr>
-        <tr>
-          <td>Page 26:</td>
-          <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page26.pdf" target="_blank">Customer Service</a></td>
-        </tr>
-        <tr>
-          <td>Page 27:</td>
-          <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page27.pdf" target="_blank">The StoneAge Team</a></td>
-        </tr>
-        <tr>
-          <td>Page 28:</td>
-          <td><a href="assets/pdf/sewer_2014/2014_warthog_catalog_web_Page28.pdf" target="_blank">Back Cover</a></td>
+          <td>Page 36:</td>
+          <td><a href="assets/pdf/sewer_2016/2016_warthog_catalog_Part19.pdf" target="_blank">Back Cover</a></td>
         </tr>
       </table>
     </div>
