--- a/sewer-tools.html
+++ b/sewer-tools.html
@@ -1,12 +1,11 @@
 ---
 layout: default
-page-type: landing
 title: Warthog Sewer Nozzles and Hydroexcavation Tools by StoneAge
 excerpt: High quality, durable jetting nozzles for the sewer industry.
 permalink: /sewer-tools
 ---
 
-<section class="spincat">
+<section class="spincat landing">
   <div class="row bg-lt-grey margin-bottom-30 header">
     <div class="col-sm-12 heading-img">
       <img src="assets/img/sewer-family-2016.jpg" class="img-responsive" alt="Striker Remote Shotgunning System for Hydroblasting"/>
