--- a/loc-la.html
+++ b/loc-la.html
@@ -66,7 +66,7 @@ contact-la: yes
         <div class="row">
           <div class="col-sm-6">
             <p><strong>Bill Shires</strong><br/>
-              Market Development Director<br/>
+              Regional Sales Manager<br/>
               Office: +1 (970) 403-1419<br/>
               Mobile: +1 (970) 903-4218
             <a href="mailto:bill.shires@stoneagetools.com">bill.shires@stoneagetools.com</a></p>
