--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -42,11 +42,13 @@ permalink: /waterblast-tools-automated-equipment
       <div class="row">
         <div class="col-sm-4 product-list">
           <div class="list-group">
-            <a href="#" class="list-group-item header">Automated Surface Cleaning</a>
-            <a href="/striker" class="list-group-item">Striker<span class="label label-warning">New for 2016</span></a>
-            <a href="/floor-cleaner" class="list-group-item">Floor Cleaner</a>
-            <a href="/powered-cleaning-heads" class="list-group-item">Powered Rotational Heads</a>
-            <a href="/self-rotary-cleaning-heads" class="list-group-item">Self-Rotating Heads</a>
+            <a href="#" class="list-group-item header">Automated Exchanger Cleaning</a>
+            <a href="/abx-2l" class="list-group-item">AutoBox ABX-2L<span class="label label-info">Flex Lancing</span></a><a href="/lightweight-positioner" class="list-group-item">Lightweight Positioner for ABX-2L</a>
+            <a href="/fin-fan-accessory" class="list-group-item">Fin Fan Accessory for ABX-2L<span class="label label-warning">New for 2016</span></a>
+            <a href="/hose-containment" class="list-group-item">Hose Containment for ABX-2L<span class="label label-warning">New for 2016</span></a>
+            <a href="/autostroke" class="list-group-item">AutoStroke for ABX-2L<span class="label label-warning">New for 2016</span></a>
+            <a href="/bundle-blaster" class="list-group-item">Bundle Blaster<span class="label label-info">Shell Side Cleaning</span></a>
+            <a href="/rigid-lance-machine" class="list-group-item">Rigid Lance Machine<span class="label label-info">Rigid Lancing</span></a>
           </div>
         </div>
         <div class="col-sm-4 product-list">
@@ -61,12 +63,11 @@ permalink: /waterblast-tools-automated-equipment
         </div>
         <div class="col-sm-4 product-list">
           <div class="list-group">
-            <a href="#" class="list-group-item header">Automated Exchanger Cleaning</a>
-            <a href="/abx-2l" class="list-group-item">AutoBox ABX-2L<span class="label label-info">Flex Lancing</span></a><a href="/lightweight-positioner" class="list-group-item">Lightweight Positioner for ABX-2L</a>
-            <a href="/fin-fan-accessory" class="list-group-item">Fin Fan Accessory for ABX-2L<span class="label label-warning">New for 2016</span></a>
-            <a href="/hose-containment" class="list-group-item">Hose Containment for ABX-2L<span class="label label-warning">New for 2016</span></a>
-            <a href="/bundle-blaster" class="list-group-item">Bundle Blaster<span class="label label-info">Shell Side Cleaning</span></a>
-            <a href="/rigid-lance-machine" class="list-group-item">Rigid Lance Machine<span class="label label-info">Rigid Lancing</span></a>
+            <a href="#" class="list-group-item header">Automated Surface Cleaning</a>
+            <a href="/striker" class="list-group-item">Striker<span class="label label-warning">New for 2016</span></a>
+            <a href="/floor-cleaner" class="list-group-item">Floor Cleaner</a>
+            <a href="/powered-cleaning-heads" class="list-group-item">Powered Rotational Heads</a>
+            <a href="/self-rotary-cleaning-heads" class="list-group-item">Self-Rotating Heads</a>
           </div>
         </div>
       </div>
