--- a/waterblast-automation/navigator-small-pipe-cleaning.html
+++ b/waterblast-automation/navigator-small-pipe-cleaning.html
@@ -27,21 +27,17 @@ master-slider: yes
       <div class="ms-showcase2-template">
         <div class="master-slider ms-skin-default" id="masterslider">
           <div class="ms-slide">
-            <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/navigator-04.jpg" alt="StoneAge Striker remote shotgunning system">
-            <img class="ms-thumb" src="../assets/img/product/thumb-navigator-04.jpg" alt="thumb">
+            <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/nav-07.jpg" alt="StoneAge Navigator small process pipe cleaning">
+            <img class="ms-thumb" src="../assets/img/product/thumb-nav-07.jpg" alt="thumb">
               <a data-type="video" href="https://www.youtube.com/embed/TgKqzxyf72A"> </a>
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/navigator-01.jpg" alt="StoneAge Striker remote shotgunning system">
-            <img class="ms-thumb" src="../assets/img/product/thumb-navigator-01.jpg" alt="thumb">
+            <img src="../assets/img/blank.gif" data-src="../assets/img/product/nav-06.jpg" alt="StoneAge Navigator small process pipe cleaning">
+            <img class="ms-thumb" src="../assets/img/product/thumb-nav-06.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/navigator-02.jpg" alt="StoneAge Striker remote hydroblasting">
-            <img class="ms-thumb" src="../assets/img/product/thumb-navigator-02.jpg" alt="thumb">
-          </div>
-          <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/navigator-03.jpg" alt="StoneAge Striker remote hydroblasting">
-            <img class="ms-thumb" src="../assets/img/product/thumb-navigator-03.jpg" alt="thumb">
+            <img src="../assets/img/blank.gif" data-src="../assets/img/product/nav-05.jpg" alt="StoneAge Navigator small process pipe cleaning">
+            <img class="ms-thumb" src="../assets/img/product/thumb-nav-05.jpg" alt="thumb">
           </div>
         </div>
       </div>
